nginx-deployments1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment1
  labels:
    app: nginx-deployment1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deployment1
  template:
    metadata:
      labels:
        app: nginx-deployment1
    spec:
      containers:
      - name: nginx-deployment1
        image: nayan744/nginx-first:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-service1
spec:
  selector:
    app: nginx-deployment1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
