nginx-deployments2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment2
  labels:
    app: nginx-deployment2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deployment2
  template:
    metadata:
      labels:
        app: nginx-deployment2
    spec:
      containers:
      - name: nginx-deployment2
        image: nayan744/nginx-second:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-service2
spec:
  selector:
    app: nginx-deployment2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
