ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-no-auth
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - path: "/foo"
        pathType: Prefix
        backend:
          service:
            name: my-service1
            port:
              number: 80
      - path: /bar
        pathType: Prefix
        backend:
           service:
             name: my-service2
             port:
               number: 80
